--- a/example2/demo.html
+++ b/example2/demo.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>demo2</title>
+	<title>demo</title>
 	<style media="screen">
 		* {
 			margin: 0;
@@ -14,21 +14,48 @@
 			padding: 50px;
 		}
 
+		#app {
+			width: 800px;
+			margin: 40px auto;
+		}
+
 		#app label {
 			display: block;
-			margin-bottom: 10px;
+		}
+
+		.item {
+			margin-bottom: 30px;
 		}
 	</style>
 </head>
 
 <body>
-	<div id="app">
-		<label for="myDate">选择您的新婚之日</label>
-		<date-picker field="myDate" placeholder="选择日期" v-model="date" :forward="true" :format="format"></date-picker>
+<div id="app">
+	<div class="item">
+		<label for="myDate">向前看</label>
+		<date-picker field="myDate" placeholder="选择日期"
+					 :forward="true"
+					 v-model="date1"
+					 :format="format"></date-picker>
 	</div>
+	<div class="item">
+		<label for="myDate">时至今日</label>
+		<date-picker field="myDate" placeholder="选择日期"
+					 :backward="true"
+					 v-model="date2"
+					 :format="format"></date-picker>
+	</div>
+	<div class="item">
+		<label for="myDate">今天不行</label>
+		<date-picker field="myDate" placeholder="选择日期"
+					 :no-today="true"
+					 v-model="date3"
+					 :format="format"></date-picker>
+	</div>
+</div>
 
-	<script src="vue.js"></script>
-	<script src="demo-src.js"></script>
+<script src="vue.js"></script>
+<script src="demo-src.js"></script>
 </body>
 
 </html>
